// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeConsumerMessage renders message with broker name 1`] = `
<div
  className="ds-u-fill--primary-darker ds-base--inverse ds-u-padding-y--2"
>
  <div
    className="ds-l-container"
  >
    header.deConsumerMessage | {"brokerName":"Acme Co."}
  </div>
</div>
`;

exports[`DeConsumerMessage renders message with fallback broker name 1`] = `
<div
  className="ds-u-fill--primary-darker ds-base--inverse ds-u-padding-y--2"
>
  <div
    className="ds-l-container"
  >
    header.deConsumerMessage | {"brokerName":"header.deBrokerNameFallback"}
  </div>
</div>
`;
